JmDNSImpl.openMulticastSocket() fails on AIX - ID: 2821919
Service discovery takes about 6 s - FIX - ID: 2910895
Update text field and receive text updates. - ID: 2349331
Make listening interface and port configurable - ID: 3000610
Add extra API to read protocol and domain - ID: 3000616
Replace outdated/inofficial "._mdns._udp." meta query with o - ID: 3000618

CHANGELOG 5 April 2010 Pierre Frisch
Rev the source code to 3.1.6
Fix an issue in the discovery where the values where not correctly retrieved from the cache.
Bug in method JmDNSImpl.openMulticastSocket - ID: 2980409
JmDNSImpl DNS Cache Entry Removal - ID: 2981167
Bug in Pointer.getServiceInfo() - ID: 2980727
TXT String not set when ServiceInfo retrieved from the Cache - ID: 2982114

CHANGELOG 30 March 2010 Pierre Frisch
Rev the source code to 3.1.5
Reorg or the Responser code to make more modular and easy to understand.
Added support for variable response length from EDNS
Added better usage of cache information that will make the request for service info more responsive.

CHANGELOG 28 March 2010 Pierre Frisch
Rev the source code to 3.1.4
Fixed a bad issue that would prevent proper response to queries.
Adjusted the timeouts to make them work by default.

CHANGELOG 22 March 2010 Pierre Frisch
Rev the source code to 3.1.3
Fixed a NPE in ServiceInfoImpl.getText()
Fixed a case sensitivity issue in the Service Info updateRecord()
Fixed a number of problem with the service listener that did not get called at the right time.
****** Please note the changes in the JavaDoc for ServiceListener ****** This is not a change of behavior but a clarification of the contract.

CHANGELOG 17 March 2010 Pierre Frisch
Rev the source code to 3.1.2
Merged issue: JmDNS.create() with no args doesn't set address properly - ID: 2937206
Merged issue: IllegalStateException in Prober.start() - ID: 2942555
Fixed an NPE exception and tested publishing and discovering the service on the same machine

CHANGELOG 9 March 2010 Pierre Frisch